fix weird blue text bug on iphone

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  color: black;
+  margin: 0;
   text-align: center;
 }
 
@@ -13,7 +13,8 @@
   padding: 8px;
   font-size: large;
   flex: 1;
-  border: none
+  border: none;
+  color: black;
 
 }
 
