--- a/src/components/counter.css
+++ b/src/components/counter.css
@@ -10,6 +10,7 @@
     border: 2px solid black;
     background-color: darkgray;
     font-size: 42px;
+    color: black;
 }
 
 .count {
